kubernetes/apps/ci-cache/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ci-cache
  namespace: ci-cache
  labels:
    app.kubernetes.io/name: ci-cache
spec:
  selector:
    app.kubernetes.io/name: ci-cache
  ports:
    - {name: s3, port: 3900, targetPort: s3, protocol: TCP}
    - {name: admin, port: 3903, targetPort: admin, protocol: TCP}
